--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
           <nav>
             <a href="/">Table of contents</a>
             <a href="https://github.com/lazywithclass/project-lamp">Github</a>
-            <a href="/about">About</a>
+            <a href="/about.html">About</a>
           </nav>
         </header>
       </div>
@@ -161,13 +161,8 @@ factFold = undefined</div>
     <script src="js/ace.min.js" type="text/javascript" charset="utf-8"></script>
     <script src="js/mode-haskell.min.js" type="text/javascript" charset="utf-8"></script>
     <script src="js/index.js" type="text/javascript" charset="utf-8"></script>
+    <script src="js/recursion-principles-and-foldables.js" type="text/javascript" charset="utf-8"></script>
     <script type="text/javascript">
-      $(function() {
-        console.log('oh hai!');
-        $('.js-editor').each(function() {
-          createEditor(this);
-        });
-      });
     </script>
   </body>
 </html>
